First commited as before_34718_rev1