@@ -23,14 +23,14 @@ import org.eclipse.jface.tests.databinding.AbstractDefaultRealmTestCase;
 
 /**
  * @since 1.0
- *
+ * 
  */
 public class ComputedValueTest extends AbstractDefaultRealmTestCase {
     public void testValueType() throws Exception {
         ComputedValue cv = new ComputedValue(Integer.TYPE) {
             @Override
 			protected Object calculate() {
-                return Integer.valueOf(42);
+                return new Integer(42);
             }
         };
         assertEquals("value type should be the type that was set", Integer.TYPE, cv.getValueType());
@@ -50,14 +50,14 @@ public class ComputedValueTest extends AbstractDefaultRealmTestCase {
         ComputedValue cv = new ComputedValue() {
             @Override
 			protected Object calculate() {
-                return Integer.valueOf(42);
+                return new Integer(42);
             }
         };
-        assertEquals("Calculated value should be 42", Integer.valueOf(42), cv.getValue());
+        assertEquals("Calculated value should be 42", new Integer(42), cv.getValue());
     }
 
     public void testDependencyValueChange() throws Exception {
-        final WritableValue value = new WritableValue(Integer.valueOf(42), Integer.TYPE);
+        final WritableValue value = new WritableValue(new Integer(42), Integer.TYPE);
 
         ComputedValue cv = new ComputedValue() {
             @Override
@@ -68,7 +68,7 @@ public class ComputedValueTest extends AbstractDefaultRealmTestCase {
 
         assertEquals("calculated value should have been that of the writable value", value.getValue(), cv.getValue());
 
-        value.setValue(Integer.valueOf(44));
+        value.setValue(new Integer(44));
 
         assertEquals("calculated value should have been that of the writable value", value.getValue(), cv.getValue());
     }
@@ -97,33 +97,33 @@ public class ComputedValueTest extends AbstractDefaultRealmTestCase {
 
                 }
 
-                return Integer.valueOf(sum);
+                return new Integer(sum);
             }
         };
 
-        WritableValueExt value1 = new WritableValueExt(Integer.TYPE, Integer.valueOf(1));
-        WritableValueExt value2 = new WritableValueExt(Integer.TYPE, Integer.valueOf(1));
+        WritableValueExt value1 = new WritableValueExt(Integer.TYPE, new Integer(1));
+        WritableValueExt value2 = new WritableValueExt(Integer.TYPE, new Integer(1));
         values.add(value1);
         values.add(value2);
-
+        
         assertFalse(value1.hasListeners());
         assertFalse(value2.hasListeners());
         cv.getValue();
         assertTrue(value1.hasListeners());
         assertTrue(value2.hasListeners());
-
+        
         //force the computed value to be stale
-        value2.setValue(Integer.valueOf(2));
+        value2.setValue(new Integer(2));
         //remove value2 from the values that are used to compute the value
         values.remove(value2);
-
+        
         //force the value to be computed
         cv.getValue();
-        assertEquals(Integer.valueOf(1), cv.getValue());
+        assertEquals(new Integer(1), cv.getValue());
         assertTrue(value1.hasListeners());
         assertFalse("because value2 is not a part of the calculation the listeners should have been removed", value2.hasListeners());
     }
-
+    
     public void testSetValueUnsupportedOperationException() throws Exception {
         ComputedValue cv = new ComputedValue() {
             @Override
@@ -131,7 +131,7 @@ public class ComputedValueTest extends AbstractDefaultRealmTestCase {
                 return null;
             }
         };
-
+        
         try {
             cv.setValue(new Object());
             fail("exception should have been thrown");
