@@ -23,7 +23,12 @@ import com.ibm.icu.text.NumberFormat;
 public class StringToShortConverterTest extends TestCase {
 	private NumberFormat numberFormat;
 	private StringToShortConverter converter;
-
+	
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see junit.framework.TestCase#setUp()
+	 */
 	@Override
 	protected void setUp() throws Exception {
 		super.setUp();
@@ -34,7 +39,7 @@ public class StringToShortConverterTest extends TestCase {
 	public void testConvertsToShort() throws Exception {
 		Short value = new Short((short) 1);
 		Short result = (Short) converter.convert(numberFormat.format(value));
-
+		
 		assertEquals(value, result);
 	}
 
@@ -52,12 +57,12 @@ public class StringToShortConverterTest extends TestCase {
 	public void testToTypeIsShort() throws Exception {
 		assertEquals(Short.class, converter.getToType());
 	}
-
+	
 	public void testToTypeIsShortPrimitive() throws Exception {
 		converter = StringToShortConverter.toShort(true);
 		assertEquals(Short.TYPE, converter.getToType());
 	}
-
+	
 	public void testReturnsNullBoxedTypeForEmptyString() throws Exception {
 		assertNull(converter.convert(""));
 	}
@@ -65,7 +70,7 @@ public class StringToShortConverterTest extends TestCase {
 	public void testThrowsIllegalArgumentExceptionIfAskedToConvertNonString()
 			throws Exception {
 		try {
-			converter.convert(Integer.valueOf(1));
+			converter.convert(new Integer(1));
 			fail("exception should have been thrown");
 		} catch (IllegalArgumentException e) {
 		}
