@@ -32,18 +32,16 @@ public class TreeViewerColumnTest extends AbstractTreeViewerTest {
 
         @Override
 		public String getText(Object element) {
-            if (fExtended) {
-				return providedString((String) element);
-			}
+            if (fExtended)
+                return providedString((String) element);
 
             return element.toString();
         }
 
         @Override
 		public String getColumnText(Object element, int index) {
-            if (fExtended) {
-				return providedString((TestElement) element);
-			}
+            if (fExtended)
+                return providedString((TestElement) element);
             return element.toString();
         }
 
@@ -80,7 +78,7 @@ public class TreeViewerColumnTest extends AbstractTreeViewerTest {
         fTreeViewer = viewer;
         return viewer;
     }
-
+    
     @Override
 	protected int getItemCount() {
         TestElement first = fRootElement.getFirstChild();
@@ -108,7 +106,7 @@ public class TreeViewerColumnTest extends AbstractTreeViewerTest {
 		try {
 			method = ColumnViewer.class.getDeclaredMethod("getViewerColumn", new Class[]{int.class});
 			method.setAccessible(true);
-			return (ViewerColumn) method.invoke(viewer, new Object[]{Integer.valueOf(index)});
+			return (ViewerColumn) method.invoke(viewer, new Object[]{new Integer(index)});
 		} catch (Exception e) {
 			throw new RuntimeException(e);
 		}
@@ -120,7 +118,7 @@ public class TreeViewerColumnTest extends AbstractTreeViewerTest {
 		assertNotNull(getViewerColumn((TreeViewer) fViewer, 1));
 		assertNull(getViewerColumn((TreeViewer) fViewer, 2));
     }
-
+    
     @Override
 	public void testLabelProvider() {
         TreeViewer viewer = (TreeViewer) fViewer;
