@@ -19,7 +19,7 @@ import org.eclipse.ui.IViewPart;
 import org.eclipse.ui.IViewSite;
 
 /**
- * This view is used to test the creation and restoration of
+ * This view is used to test the creation and restoration of 
  * view state between sessions.
  */
 public class SessionView extends MockViewPart {
@@ -82,14 +82,14 @@ public class SessionView extends MockViewPart {
         // constructor.
         Assert.assertNotNull(memento);
 
-        // Read float.
+        // Read float.	
         Float bigFloat = memento.getFloat("float");
         Assert.assertNotNull(bigFloat);
         Assert.assertEquals(bigFloat.floatValue(), 0.50f, 0.0001);
 
-        // Read int.
+        // Read int.	
         Integer bigInt = memento.getInteger("integer");
-        Assert.assertEquals(bigInt, Integer.valueOf(50));
+        Assert.assertEquals(bigInt, new Integer(50));
 
         // Read string.
         String str = memento.getString("string");
@@ -99,7 +99,7 @@ public class SessionView extends MockViewPart {
         IMemento child = memento.getChild("single");
         Assert.assertNotNull(child);
         bigInt = child.getInteger("id");
-        Assert.assertEquals(bigInt, Integer.valueOf(1));
+        Assert.assertEquals(bigInt, new Integer(1));
 
         // Read multiple children.
         bigInt = memento.getInteger("multiple.count");
@@ -111,7 +111,7 @@ public class SessionView extends MockViewPart {
             child = children[nX];
             Assert.assertNotNull(child);
             bigInt = child.getInteger("id");
-            Assert.assertEquals(bigInt, Integer.valueOf(nX));
+            Assert.assertEquals(bigInt, new Integer(nX));
         }
     }
 }
