@@ -19,9 +19,9 @@ public class ToggleStateHandler extends AbstractHandler {
 
 	@Override
 	public Object execute(ExecutionEvent event) throws ExecutionException {
-
+		
 		boolean oldValue = HandlerUtil.toggleCommandState(event.getCommand());
-		return Boolean.valueOf(oldValue);
+		return new Boolean(oldValue);
 	}
 
 }
