@@ -19,7 +19,7 @@ import org.eclipse.ui.views.properties.ComboBoxPropertyDescriptor;
 
 /**
  * Test for new functionality pertaining to Bug 21013.
- *
+ * 
  * @since 3.0
  */
 public class ComboBoxPropertyDescriptorTest extends TestCase {
@@ -48,24 +48,24 @@ public class ComboBoxPropertyDescriptorTest extends TestCase {
      */
     public void testGetDefaultLabelProvider() {
         ILabelProvider provider = descriptor.getLabelProvider();
-        assertEquals("Default label provider is of the wrong type", //$NON-NLS-1$
+        assertEquals("Default label provider is of the wrong type", //$NON-NLS-1$ 
                 ComboBoxLabelProvider.class, provider.getClass());
 
         for (int i = 0; i < values.length; i++) {
             String expected = values[i];
             assertEquals("Wrong label provided", //$NON-NLS-1$
-                    expected, provider.getText(Integer.valueOf(i)));
+                    expected, provider.getText(new Integer(i)));
 
         }
 
         testWrongLabel(provider, new Object());
         testWrongLabel(provider, null);
-        testWrongLabel(provider, Integer.valueOf(-1));
-        testWrongLabel(provider, Integer.valueOf(values.length));
+        testWrongLabel(provider, new Integer(-1));
+        testWrongLabel(provider, new Integer(values.length));
     }
 
     /**
-     * Tests that a bad element object (an Integer outside the accepted range,
+     * Tests that a bad element object (an Integer outside the accepted range, 
      * null or an other Object) returns the empty String.
      * @param provider the provider to test against.
      * @param element the element to test.
